[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/trailers.png" type="Texture" id=1]
[ext_resource path="res://Environment/Trailer.gd" type="Script" id=2]
[ext_resource path="res://Assets/Delivered Sign.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 157, 61.5 )

[node name="Trailer" type="Area2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 256, -152 )
z_index = -1
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -100 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 151, -51.5 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 152, -56.5 )
scale = Vector2( 16.2, 6.65 )

[connection signal="body_entered" from="." to="." method="_on_Trailer_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Trailer_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
